add login section + layout update

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,4 +1,14 @@
 {
     "student": "Student",
-    "teacher": "Teacher"
+    "teacher": "Teacher",
+    "email": "Email",
+    "password": "Password",
+    "confirm_password": "Confirm password",
+    "confirm": "Confirm",
+    "register": "Register",
+    "already_registered?": "Have you already registered?",
+    "role": "Role",
+    "The surname field is required.": "Field is required",
+    "login": "Log in",
+    "remember_me": "Remember me"
 }
