--- a/lang/sk.json
+++ b/lang/sk.json
@@ -7,10 +7,10 @@
     "password": "Heslo",
     "confirm_password": "Potvrď heslo",
     "confirm": "Potvrď",
-    "register": "Registrovať",
     "already_registered?": "Už ste zaregistrovaní?",
     "role": "Rola",
     "The surname field is required.": "Pole je povinné vyplniť",
     "login": "Prihlásiť sa",
+    "register": "Registrovať sa",
     "remember_me": "Zapamätať si ma"
 }
