--- a/lang/en.json
+++ b/lang/en.json
@@ -19,5 +19,15 @@
     "view": "Show",
     "tasks": "Tasks",
     "progress": "In progress",
-    "submitted": "Submitted"
+    "submitted": "Submitted",
+    "select-file": "Select file",
+    "upload": "Upload",
+    "upload-latex": "Upload LaTeX",
+    "select-user": "Select user",
+    "select-access-date": "Select access interval",
+    "create-exercise-set": "Create exercise set",
+    "Dashboard": "Dashboard",
+    "Profile": "Profile",
+    "Logout": "Log Out",
+    "drop-file": "Drop file here"
 }
