--- a/lang/en.json
+++ b/lang/en.json
@@ -44,5 +44,6 @@
     "excersise-sets-for": "Excersise sets for: ",
     "points": "Points",
     "state": "State",
-    "documentation": "Documentation"
+    "documentation": "Documentation",
+    "click": "Click"
 }
