--- a/lang/sk.json
+++ b/lang/sk.json
@@ -44,5 +44,6 @@
     "excersise-sets-for": "Zadanie pre: ",
     "points": "Body",
     "state": "Stav",
-    "documentation": "Dokumentácia"
+    "documentation": "Dokumentácia",
+    "click": "Klikni"
 }
